[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
priority-queue = "1.3.2"
regex = "1.10.2"
z3 = "0.12.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
